Changed height of the Article component. The height was originally 62%, which was too big for the page and causing issues with the footer appearing in the middle of the screen

--- a/src/components/HomePage/Article/Article.css
+++ b/src/components/HomePage/Article/Article.css
@@ -1,6 +1,6 @@
 div.article {
   margin: 4rem 0 5rem;
-  height: 62%;
+  height: 10%;
 }
 
 div.article div.line-break {
